# torch-image-metrics

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py
src/package_name/: __init__.py
tests/: __init__.py  test_basic.py
tests/unit/test_core/: test_base_metric.py
tests/unit/test_evaluator/: __init__.py  test_evaluator.py
tests/unit/test_metrics/: test_basic_metrics.py
tests/unit/test_quick_api/: test_quick_functions.py
